# FP_PROJ

./: .gitignore  .gitmodules  README.md
CrazySim/crazyflie-firmware/: version.c
CrazySim/crazyflie-firmware/src/modules/src/: stabilizer.c
CrazySim/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
CrazySim/ros2_ws/install/crazyflie/lib/crazyflie/: log  (+15 more)
CrazySim/ros2_ws/log/: latest_build
CrazySim/ros2_ws/src/crazyswarm2/crazyflie_examples/: setup.cfg
CrazySim/ros2_ws/src/test_pkg/: CMakeLists.txt  package.xml
CrazySim/ros2_ws/src/test_pkg/bag/: log_0516_132352.csv  log_0516_132528.csv  log_0516_134911.csv  log_0516_140955.csv  log_0516_141736.csv  log_0516_145445.csv  log_0516_145659.csv  log_0516_145910.csv  log_0516_150827.csv  log_0516_153727.csv  log_0516_162452.csv  log_0516_164727.csv  log_0516_165251.csv  log_0516_165534.csv  log_0516_165717.csv
CrazySim/ros2_ws/src/test_pkg/config/: config.yaml  logging_config.yaml
CrazySim/ros2_ws/src/test_pkg/launch/: launch.py  logger.py  rviz_visual.py
CrazySim/ros2_ws/src/test_pkg/models/: model.urdf
CrazySim/ros2_ws/src/test_pkg/src/: csv_player.cpp  su_fkik.cpp  su_rviz.cpp  topic_csv_logger.cpp  topic_csv_pub.cpp  trajectory_generator.cpp  wrench_bridge.cpp
CrazySim/ros2_ws/src/test_pkg_py/: package.xml  setup.cfg  setup.py
CrazySim/ros2_ws/src/test_pkg_py/test_pkg_py/: cf_interface.py
crazyflie-clients-python/: RELEASE-VERSION
crazyflie-clients-python/src/cfclient/: version.json
crazyflie-clients-python/src/cfclient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+598 files in other folders)
