<?xml version="1.0"?>
<package format="3">
  <name>test_pkg_py</name>
  <version>0.0.1</version>
  <description>Python-based CF interface</description>
  <maintainer email="seosu99@seoultech.ac.kr">mrl-seuk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>crazyflie_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

